Applying styles to the page header and search to fix sizing and alignment.

--- a/src/common/components/select-repositories-page/select-repositories-page.css
+++ b/src/common/components/select-repositories-page/select-repositories-page.css
@@ -8,6 +8,8 @@
 }
 
 .selectRepositoriesHeading {
+  display: flex;
+  justify-content: space-between;
   padding: 1rem;
 }
 
